<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/equals"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/divide"
        android:layout_alignLeft="@+id/decimal"
        android:layout_alignRight="@+id/divide"
        android:layout_alignStart="@+id/decimal"
        android:layout_below="@+id/zero"
        android:layout_marginTop="37dp"
        android:text="@string/equals" />

    <Button
        android:id="@+id/decimal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/decimal" />

    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eight"
        android:layout_alignStart="@+id/eight"
        android:layout_below="@+id/eight"
        android:text="@string/zero" />

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/seven" />

    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:layout_below="@+id/six"
        android:text="@string/nine" />

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/four" />

    <Button
        android:id="@+id/five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/four"
        android:layout_alignLeft="@+id/two"
        android:layout_alignStart="@+id/two"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/three"
        android:layout_alignStart="@+id/three"
        android:layout_below="@+id/three"
        android:text="@string/six" />

    <Button
        android:id="@+id/plus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edt1"
        android:layout_alignRight="@+id/edt1"
        android:layout_alignTop="@+id/three"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_toRightOf="@+id/three"
        android:text="@string/plus" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/five"
        android:layout_alignStart="@+id/five"
        android:layout_below="@+id/five"
        android:text="@string/eight" />

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/one"
        android:layout_toLeftOf="@+id/three"
        android:layout_toStartOf="@+id/three"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/two"
        android:layout_centerHorizontal="true"
        android:text="@string/three" />

    <Button
        android:id="@+id/minus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/plus"
        android:layout_alignLeft="@+id/plus"
        android:layout_alignRight="@+id/plus"
        android:layout_alignStart="@+id/plus"
        android:layout_below="@+id/plus"
        android:text="@string/minus" />

    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/four"
        android:layout_alignRight="@+id/four"
        android:layout_below="@+id/edt1"
        android:layout_marginTop="94dp"
        android:text="@string/one" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nine"
        android:layout_alignStart="@+id/nine"
        android:layout_below="@+id/nine"
        android:text="@string/clear" />

    <Button
        android:id="@+id/multiply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/minus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/minus"
        android:layout_below="@+id/minus"
        android:text="@string/multiply" />

    <Button
        android:id="@id/divide"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/multiply"
        android:layout_alignLeft="@+id/multiply"
        android:layout_alignRight="@+id/multiply"
        android:layout_alignStart="@+id/multiply"
        android:layout_below="@+id/multiply"
        android:text="@string/divide" />

</RelativeLayout>
